fix(parser): several improvements to parse collapsing templates
Example: "This LLM-generated text has been collapsed" templates at https://en.wikipedia.org/w/index.php?title=Wikipedia:Administrators%27_noticeboard/Incidents&oldid=1353968784

--- a/src/CommentLayers.less
+++ b/src/CommentLayers.less
@@ -309,7 +309,8 @@ body:not(.skin-monobook)
 		position: relative;
 		z-index: 0;
 
-		.mw-parser-output & {
+		// https://en.wikipedia.org/wiki/Wikipedia:Administrators'_noticeboard/Incidents#c-JoyBrag-20260505150400-JoyBrag,_possible_unpaid_editing/conflict_of_interest,_clear_SPA
+		.mw-parser-output &:not(tr):not(td):not(tbody):not(table) {
 			display: flow-root;
 
 			// `display: flow-root` should do the job of `overflow: hidden` or `overflow: auto` if it's
